--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <h3> Água sagrada dos programadores</h3>
               <p>Um elixir divino para progradores , uma vez usado concede a
                 eles a capacidade de ser um programador de verdade , além de
-                uma bela energia extra para todos os seus deveres, Algumas
+                uma energia extra para todos os seus deveres, Algumas
                 pessoas usam uma substância nefasta e sombria conhecida como
                 "Energético" mais todos sabem que só os programadores
                 Nutella usam essas coisas vergonhosas.</p>
