Site com tela de Login

--- a/historia.html
+++ b/historia.html
@@ -14,14 +14,14 @@
       <a class="link" href="index.html"> cardapio </a>
       <a class="link" href="historia.html"> sobre nós </a>
       <a class="link" href="restaurante.html"> restaurantes </a>
-      <a class="link2" href="ajuda.html"> Ajuda </a>
+      <a class="link" href="Login.html">Entre para o Time</a>
       <br>
     </div>
     <h1> Sobre Nós: </h1>
     <div class="food">
       <table>
         <tr>
-          <td><img class="image2" src="jorge.png"></td>
+          <td><img class="image2" src="/imgs/jorge.png"></td>
           <td class="mesa">
             <h2> Chef Jorge </h2>
             <h3> Formado em 7 artes culinárias diferentes </h3>
@@ -54,7 +54,7 @@
               que sim nenhum chefe entrega seus temperos kkkkkk ....
             </p>
           </td>
-          <td><img class="image" src="jorget.PNG"></td>
+          <td><img class="image" src="/imgs/jorget.PNG"></td>
         </tr>
       </table>
 
