--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="link" href="index.html"> Cardapio </a>
         <a class="link" href="historia.html"> Sobre nós </a>
         <a class="link" href="restaurante.html"> Restaurantes </a>
-        <a class="link2" href="ajuda.html"> Ajuda </a>
+        <a class="link" href="Login.html">Entre para o Time</a>
         <br>
       </div>
     </nav>
@@ -26,7 +26,7 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image2" src="cuzcuz.jpg"></td>
+            <td><img class="image2" src="imgs/cuzcuz.jpg"></td>
             <td class="mesa">
               <h2> Cuzcuz Paulista </h2>
               <h3> Nunca confie nos paulistas </h3>
@@ -45,7 +45,7 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image2" src="whey.png"></td>
+            <td><img class="image2" src="/imgs/whey.png"></td>
             <td class="mesa">
               <h2> Whey protein </h2>
               <h3>A fórmula mágica para te deixar mais sexy </h3>
@@ -64,15 +64,15 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image2" src="capipastel.jpg"></td>
+            <td><img class="image2" src="/imgs/capipastel.jpg"></td>
             <td class="mesa">
               <h2>Pastel de capivara </h2>
               <h3>É muito fofo para se comer </h3>
-              <p>Um pastel com um formato de um roedor fofo , capivaras são 
-                 muito legais , e isso concerteza vai te
-                 fazer
-                 ter pena de comer o pastel, contra intuitivo comer algo tão 
-                 fofo</p>
+              <p>Um pastel com um formato de um roedor fofo , capivaras são
+                muito legais , e isso concerteza vai te
+                fazer
+                ter pena de comer o pastel, contra intuitivo comer algo tão
+                fofo</p>
             </td>
           </tr>
         </table>
@@ -83,11 +83,11 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image2" src="pontoextra.jpg"></td>
+            <td><img class="image2" src="/imgs/pontoextra.jpg"></td>
             <td class="mesa">
               <h2> Quiche de camarão </h2>
               <h3> Uma empada sem tampa ou uma mini torta ? </h3>
-              <p>Uma poderosa comida para alunos que não sabem programar em 
+              <p>Uma poderosa comida para alunos que não sabem programar em
                 HTML, faz certos professores te darem uma
                 nota
                 extra por deixa ele com fome</p>
@@ -101,7 +101,7 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image2" src="cafe.jpg"></td>
+            <td><img class="image2" src="/imgs/cafe.jpg"></td>
             <td class="mesa">
               <h2> CAFÉ </h2>
               <h3> Água sagrada dos programadores</h3>
@@ -121,7 +121,7 @@
       <div class="food">
         <table>
           <tr>
-            <td><img class="image3" src="suco.jpg"></td>
+            <td><img class="image3" src="/imgs/suco.jpg"></td>
             <td class="mesa">
               <h2> Energético </h2>
               <h3>Suquinho de programador</h3>
@@ -143,4 +143,5 @@
     </footer>
   </div>
 </body>
+
 </html>
