--- a/restaurante.html
+++ b/restaurante.html
@@ -14,13 +14,13 @@
       <a class="link" href="index.html"> cardapio </a>
       <a class="link" href="historia.html"> sobre nós </a>
       <a class="link" href="restaurante.html"> restaurantes </a>
-      <a class="link2" href="ajuda.html"> Ajuda </a>
+      <a class="link" href="Login.html">Entre para o Time</a>
       <br>
     </div>
     <div class="food">
       <table>
         <tr>
-          <td><img class="image2" src="rest.png"></td>
+          <td><img class="image2" src="/imgs/rest.png"></td>
           <td class="mesa">
             <h2> Restaurantes </h2>
             <h3> Sempre a sua disposição </h3>
