Telas de Login e Cadastro

--- a/Login.html
+++ b/Login.html
@@ -22,14 +22,15 @@
                 <label for="usuário"><b>Usuário</b></label>
                 <input type="text" name="usuário" placeholder="Usuário">
 
-                <label for="usuário"><b>Senha</b></label>
-                <input type="text" name="senha" placeholder="Senha">
+                <label for="senha"><b>Senha</b></label>
+                <input type="password" name="senha" placeholder="Senha">
 
-                <p>Não possui cadastro? <a href="">cadastre-se agora!</a></p>
+                <p>Não possui cadastro? <a href="Cadastro.html">cadastre-se agora!</a></p>
 
-                <button type="submit">Entrar</button>
+                <button type="submit" class="botao-login">Entrar</button>
             </form>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
