--- a/Login.html
+++ b/Login.html
@@ -17,7 +17,7 @@
                 </h2>
             </div>
 
-            <form>
+            <form action="login.php" method="POST">
                 <h2>Login</h2>
                 <label for="usuário"><b>Usuário</b></label>
                 <input type="text" name="usuário" placeholder="Usuário">
