--- a/cadastrado.html
+++ b/cadastrado.html
@@ -20,14 +20,13 @@
     <div class="food">
       <table>
         <tr>
-          <td><img class="image2" src="/imgs/rest.png"></td>
+          <td><img class="image2" src="/imgs/jorge.png"></td>
           <td class="mesa">
-            <h2> Restaurantes </h2>
-            <h3> Sempre a sua disposição </h3>
-            <p>Sempre que vê essas barracas pelo reino , saiba que são lojinhas do Jorge , onde você pode comprar suas
-              deliciosas comidas , sua primeira e maior barraca fica na arena do último pedido , caso entre nas barracas
-              e não tenha ninguém, toque o sino que fica ma bancada , e sim Jorge trabalha em todas as barracas do
-              reino, não me pergunte como , eu só tô programando esse html.</p>
+            <h2> Estamos analisando seus dados </h2>
+            <h3> Jorge agradece a sua escolha</h3>
+            <p>Obrigado por se candidatar a nosso emprego, não precisa mandar mais informações,
+               Jorge já sabe de todas as suas informações através de compra de banco de dados de sites que você frequenta,
+               fique no aguardo que sua carta informando mais sobre chegará em breve.</p>
           </td>
         </tr>
       </table>
