--- a/historia.html
+++ b/historia.html
@@ -14,7 +14,7 @@
       <a class="link" href="index.html"> cardapio </a>
       <a class="link" href="historia.html"> sobre nós </a>
       <a class="link" href="restaurante.html"> restaurantes </a>
-      <a class="link" href="Login.html">Entre para o Time</a>
+      <a class="link2" href="Login.html">Entre para o Time</a>
       <br>
     </div>
     <h1> Sobre Nós: </h1>
