--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="link" href="index.html"> Cardapio </a>
         <a class="link" href="historia.html"> Sobre nós </a>
         <a class="link" href="restaurante.html"> Restaurantes </a>
-        <a class="link" href="Login.html">Entre para o Time</a>
+        <a class="link2" href="Login.html">Entre para o Time</a>
         <br>
       </div>
     </nav>
